--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t julienchastang/emacs:latest .
+  - travis_wait 30 docker build -t julienchastang/emacs:latest .
 
 after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
