--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ sudo: required
 services:
   - docker
 
+language: generic
+
 before_install:
-  - travis_wait 30 docker build -t julienchastang/emacs:latest .
+  - docker build -t julienchastang/emacs:latest .
 
 after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
